--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ python-dotenv = "^1.0.1"
 agency-swarm = "^0.3.0"
 griptape = "^0.33.1"
 speechrecognition = "^3.11.0"
+pyaudio = "^0.2.14"
+openai-whisper = "^20240930"
+sounddevice = "^0.5.1"
 
 
 [build-system]
