--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ speechrecognition = "^3.11.0"
 pyaudio = "^0.2.14"
 openai-whisper = "^20240930"
 sounddevice = "^0.5.1"
+gtts = "^2.5.3"
+pydub = "^0.25.1"
 
 
 [build-system]
