--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,12 @@ openai-whisper = "^20240930"
 sounddevice = "^0.5.1"
 gtts = "^2.5.3"
 pydub = "^0.25.1"
+yt-dlp = "^2024.11.4"
+python-vlc = "^3.0.21203"
+torch = "^2.5.1+cu124"
+pytube = "^15.0.0"
+torchvision = "^0.20.1+cu124"
+torchaudio = "^2.5.1+cu124"
 
 
 [build-system]
