--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Egor Polyakov <leftgoga@yandex.ru>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 swarm = {git = "https://github.com/openai/swarm.git"}
 astra-assistants = "^2.2.2"
 python-dotenv = "^1.0.1"
@@ -29,6 +29,8 @@ youtube-dl = "^2021.12.17"
 pygame = "^2.6.1"
 simpleaudio = "^1.0.4"
 boto3 = "^1.35.78"
+pyttsx3 = "^2.98"
+google-cloud-texttospeech = "^2.24.0"
 
 
 [build-system]
